[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/ui/Get_Ready2.png" type="Texture" id=1]
[ext_resource path="res://src/UserInterface/GameUI.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/LevelStats2.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/Pause2.png" type="Texture" id=4]
[ext_resource path="res://assets/world/bg_2.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/ui_bomb.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/OxygenStatus.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/GameSpeedStatus.png" type="Texture" id=8]
[ext_resource path="res://src/Camera.gd" type="Script" id=9]
[ext_resource path="res://assets/ui/Mermaid3.png" type="Texture" id=10]
[ext_resource path="res://src/UserInterface/LevelStats.gd" type="Script" id=11]
[ext_resource path="res://assets/ui/GameSpeedBorder.png" type="Texture" id=12]
[ext_resource path="res://src/UserInterface/PauseMenu.gd" type="Script" id=13]
[ext_resource path="res://scenes/screens/UIButton.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/Font.tres" type="DynamicFont" id=15]
[ext_resource path="res://scenes/screens/LoadMenu.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/ui/Game_Over2.png" type="Texture" id=17]
[ext_resource path="res://scenes/screens/UIStatusButton.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/ui/Button_Touch.png" type="Texture" id=19]
[ext_resource path="res://src/UserInterface/TouchControls.gd" type="Script" id=20]
[ext_resource path="res://assets/ui/Button_Bomb.png" type="Texture" id=21]
[ext_resource path="res://assets/ui/Button_Menu.png" type="Texture" id=22]
[ext_resource path="res://assets/ui/Button Pause.png" type="Texture" id=23]

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="UserInterface" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Views" type="HBoxContainer" parent="UserInterface"]
margin_right = 1280.0
margin_bottom = 624.0
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="ViewportContainer2" type="ViewportContainer" parent="UserInterface/Views"]
margin_right = 576.0
margin_bottom = 624.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="UserInterface/Views/ViewportContainer2"]
size = Vector2( 576, 624 )
transparent_bg = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="Camera2" type="Camera2D" parent="UserInterface/Views/ViewportContainer2/Viewport2"]
current = true
zoom = Vector2( 0.6, 0.6 )
limit_left = 0
limit_top = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 2.5
drag_margin_left = 0.08
drag_margin_top = 0.08
drag_margin_right = 0.08
drag_margin_bottom = 0.08
script = ExtResource( 9 )

[node name="MermaidSeparation" type="TextureRect" parent="UserInterface/Views"]
margin_left = 576.0
margin_right = 704.0
margin_bottom = 624.0
texture = ExtResource( 10 )

[node name="ViewportContainer1" type="ViewportContainer" parent="UserInterface/Views"]
margin_left = 704.0
margin_right = 1280.0
margin_bottom = 624.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="UserInterface/Views/ViewportContainer1"]
size = Vector2( 576, 624 )
transparent_bg = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="Camera1" type="Camera2D" parent="UserInterface/Views/ViewportContainer1/Viewport1"]
current = true
zoom = Vector2( 0.6, 0.6 )
limit_left = 0
limit_top = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 2.5
drag_margin_left = 0.08
drag_margin_top = 0.08
drag_margin_right = 0.08
drag_margin_bottom = 0.08
script = ExtResource( 9 )

[node name="LevelStats" type="TextureRect" parent="UserInterface"]
margin_top = 624.0
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 3 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FishCount" type="Label" parent="UserInterface/LevelStats"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 266.0
margin_top = -9.0
margin_right = 320.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 15 )
text = "000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeCount" type="Label" parent="UserInterface/LevelStats"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 99.0
margin_top = -9.0
margin_right = 135.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 15 )
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelCount" type="Label" parent="UserInterface/LevelStats"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1161.0
margin_top = -9.0
margin_right = 1215.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 15 )
text = "001"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BombGrid" type="GridContainer" parent="UserInterface/LevelStats"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 282.0
margin_top = -70.0
margin_right = 378.0
margin_bottom = -26.0
custom_constants/vseparation = 4
custom_constants/hseparation = 0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bomb1" type="TextureRect" parent="UserInterface/LevelStats/BombGrid"]
margin_right = 24.0
margin_bottom = 20.0
texture = ExtResource( 6 )

[node name="Bomb2" type="TextureRect" parent="UserInterface/LevelStats/BombGrid"]
margin_left = 24.0
margin_right = 48.0
margin_bottom = 20.0
texture = ExtResource( 6 )

[node name="Bomb3" type="TextureRect" parent="UserInterface/LevelStats/BombGrid"]
margin_left = 48.0
margin_right = 72.0
margin_bottom = 20.0
texture = ExtResource( 6 )

[node name="Bomb4" type="TextureRect" parent="UserInterface/LevelStats/BombGrid"]
margin_left = 72.0
margin_right = 96.0
margin_bottom = 20.0
texture = ExtResource( 6 )

[node name="Bomb5" type="TextureRect" parent="UserInterface/LevelStats/BombGrid"]
margin_top = 24.0
margin_right = 24.0
margin_bottom = 44.0
texture = ExtResource( 6 )

[node name="Bomb6" type="TextureRect" parent="UserInterface/LevelStats/BombGrid"]
margin_left = 24.0
margin_top = 24.0
margin_right = 48.0
margin_bottom = 44.0
texture = ExtResource( 6 )

[node name="Bomb7" type="TextureRect" parent="UserInterface/LevelStats/BombGrid"]
margin_left = 48.0
margin_top = 24.0
margin_right = 72.0
margin_bottom = 44.0
texture = ExtResource( 6 )

[node name="Bomb8" type="TextureRect" parent="UserInterface/LevelStats/BombGrid"]
margin_left = 72.0
margin_top = 24.0
margin_right = 96.0
margin_bottom = 44.0
texture = ExtResource( 6 )

[node name="Player1O2" type="TextureProgress" parent="UserInterface/LevelStats"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -244.0
margin_top = -60.0
margin_right = 236.0
margin_bottom = -52.0
max_value = 1800.0
value = 520.0
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2O2" type="TextureProgress" parent="UserInterface/LevelStats"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -244.0
margin_top = -36.0
margin_right = 236.0
margin_bottom = -28.0
max_value = 1800.0
value = 520.0
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameSpeed" type="TextureProgress" parent="UserInterface/LevelStats"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -88.0
margin_right = 36.0
margin_bottom = -72.0
min_value = 1.0
max_value = 10.0
value = 6.0
texture_over = ExtResource( 12 )
texture_progress = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetReadyTexture" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -32.0
margin_right = 275.0
margin_bottom = 32.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTexture" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.0
margin_top = -32.0
margin_right = 164.0
margin_bottom = 32.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverTexture" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -302.0
margin_top = -32.0
margin_right = 302.0
margin_bottom = 32.0
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -250.0
margin_right = 300.0
margin_bottom = 162.0
alignment = 1
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" parent="PauseMenu" instance=ExtResource( 14 )]

[node name="Label" parent="PauseMenu/Continue" index="0"]
text = "continue playing"

[node name="Restart" parent="PauseMenu" instance=ExtResource( 14 )]
margin_top = 52.0
margin_bottom = 100.0

[node name="Label" parent="PauseMenu/Restart" index="0"]
text = "restart level"

[node name="Load" parent="PauseMenu" instance=ExtResource( 14 )]
margin_top = 104.0
margin_bottom = 152.0

[node name="Label" parent="PauseMenu/Load" index="0"]
text = "load game"

[node name="Save" parent="PauseMenu" instance=ExtResource( 14 )]
margin_top = 156.0
margin_bottom = 204.0

[node name="Label" parent="PauseMenu/Save" index="0"]
text = "save game"

[node name="Music" parent="PauseMenu" instance=ExtResource( 14 )]
margin_top = 208.0
margin_bottom = 256.0

[node name="Label" parent="PauseMenu/Music" index="0"]
text = "sfx or music"

[node name="Volume" parent="PauseMenu" instance=ExtResource( 18 )]
margin_top = 260.0
margin_bottom = 308.0

[node name="Label" parent="PauseMenu/Volume/HBoxContainer" index="0"]
margin_left = 64.0
margin_right = 280.0
text = "Volume: "

[node name="TextureProgress" parent="PauseMenu/Volume/HBoxContainer" index="1"]
margin_left = 284.0
margin_right = 536.0

[node name="Speed" parent="PauseMenu" instance=ExtResource( 14 )]
margin_top = 312.0
margin_bottom = 360.0

[node name="Label" parent="PauseMenu/Speed" index="0"]
text = "speed:"

[node name="Exit" parent="PauseMenu" instance=ExtResource( 14 )]
margin_top = 364.0
margin_bottom = 412.0

[node name="Label" parent="PauseMenu/Exit" index="0"]
text = "exit game"

[node name="LoadMenu" parent="." instance=ExtResource( 16 )]
visible = false

[node name="TouchControls" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpDown" type="VBoxContainer" parent="TouchControls"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_right = 64.0
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlUp" type="Control" parent="TouchControls/UpDown"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )

[node name="TouchUp" type="TouchScreenButton" parent="TouchControls/UpDown/ControlUp"]
normal = ExtResource( 19 )
action = "Player1_Up"
visibility_mode = 1

[node name="ControlDown" type="Control" parent="TouchControls/UpDown"]
margin_top = 132.0
margin_right = 128.0
margin_bottom = 260.0
rect_min_size = Vector2( 128, 128 )

[node name="TouchDown" type="TouchScreenButton" parent="TouchControls/UpDown/ControlDown"]
normal = ExtResource( 19 )
action = "Player1_Down"
visibility_mode = 1

[node name="LeftRight" type="HBoxContainer" parent="TouchControls"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_right = -32.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlLeft" type="Control" parent="TouchControls/LeftRight"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )

[node name="TouchLeft" type="TouchScreenButton" parent="TouchControls/LeftRight/ControlLeft"]
normal = ExtResource( 19 )
action = "Player1_Left"
visibility_mode = 1

[node name="ControlRight" type="Control" parent="TouchControls/LeftRight"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )

[node name="TouchRight" type="TouchScreenButton" parent="TouchControls/LeftRight/ControlRight"]
normal = ExtResource( 19 )
action = "Player1_Right"
visibility_mode = 1

[node name="PauseBack" type="HBoxContainer" parent="TouchControls"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -68.0
margin_bottom = 32.0
grow_horizontal = 0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseControl" type="Control" parent="TouchControls/PauseBack"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="TouchPause" type="TouchScreenButton" parent="TouchControls/PauseBack/PauseControl"]
scale = Vector2( 0.999981, 1.00024 )
normal = ExtResource( 23 )
action = "ui_pause"
visibility_mode = 1

[node name="BackControl" type="Control" parent="TouchControls/PauseBack"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="TouchBack" type="TouchScreenButton" parent="TouchControls/PauseBack/BackControl"]
position = Vector2( 0.0478516, 0 )
scale = Vector2( 0.997766, 0.998033 )
normal = ExtResource( 22 )
action = "ui_cancel"
visibility_mode = 1

[node name="BombControl" type="Control" parent="TouchControls"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -256.0
margin_top = -91.0
margin_right = 391.0
margin_bottom = -8.0
rect_min_size = Vector2( 600, 70 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchBomb" type="TouchScreenButton" parent="TouchControls/BombControl"]
position = Vector2( 0.761302, 0.521859 )
scale = Vector2( 0.998545, 1.0322 )
normal = ExtResource( 21 )
action = "Player1_Bomb"
visibility_mode = 1
[connection signal="pressed" from="PauseMenu/Continue" to="PauseMenu" method="_on_Continue_pressed"]
[connection signal="pressed" from="PauseMenu/Restart" to="PauseMenu" method="_on_Restart_pressed"]
[connection signal="pressed" from="PauseMenu/Load" to="PauseMenu" method="_on_Load_pressed"]
[connection signal="pressed" from="PauseMenu/Save" to="PauseMenu" method="_on_Save_pressed"]
[connection signal="pressed" from="PauseMenu/Music" to="PauseMenu" method="_on_Music_pressed"]
[connection signal="pressed" from="PauseMenu/Volume" to="PauseMenu" method="_on_Volume_pressed"]
[connection signal="pressed" from="PauseMenu/Speed" to="PauseMenu" method="_on_Speed_pressed"]
[connection signal="pressed" from="PauseMenu/Exit" to="PauseMenu" method="_on_Exit_pressed"]

[editable path="PauseMenu/Continue"]

[editable path="PauseMenu/Restart"]

[editable path="PauseMenu/Load"]

[editable path="PauseMenu/Save"]

[editable path="PauseMenu/Music"]

[editable path="PauseMenu/Volume"]

[editable path="PauseMenu/Speed"]

[editable path="PauseMenu/Exit"]
